Correction du Z-index de l'autocomplete (pour modales bootstrap) + déplacement d'un correctif concernant la taille de police de l'autocomplete pour qu'il soit véritablement pris en compte.
git-svn-id: svn+ssh://svn.projects.openwide.fr/svnroot/owsi-tools/branches/owsi-core-0.8-MAINTENANCE@2319 d3474844-eb8e-4abc-b058-2b321fed648b

--- a/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/jquery-ui.less
+++ b/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/jquery-ui.less
@@ -169,7 +169,3 @@
 		}
 	}
 }
-
-.ui-widget.ui-autocomplete {
-	font-size: 1em;
-}
